client/src/main/java/piviz/executionEngine/PiParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. PiParser.java */
package piviz.executionEngine;
import java.io.InputStream;
import java.io.Reader;
import java.util.HashSet;
import java.util.Hashtable;

import piviz.exceptions.PiParserError;

/**
* PiParser uses an input stream and constructs an Abstract syntax tree from the definitions in
* this stream.
* @author Anja
*/
public class PiParser/*@bgen(jjtree)*/implements PiParserTreeConstants, PiParserConstants {/*@bgen(jjtree)*/
  protected JJTPiParserState jjtree = new JJTPiParserState();
        /**
	* For checking if an agent is defined twice.
	*/
        private static HashSet agentNames;
        /**
	* Store information about the defined pools. The user does not have to define any pools.
	* They are just used for additional information during visualization.
	* pools looks like the following: <key: agentName><value:poolName>
	*/
        private static Hashtable pools;
        /**
	* For checking if a pool is defined twice.
	*/
        private static HashSet poolNames;

        private static String currentAgent;

        /**
	* Parse input stream and construct an Abstract Syntax Tree.
	* @return Returns the root node of the constructed tree.
	*/
        public static SimpleNode parseFile(InputStream stream) throws PiParserError, Exception {
                PiParser t = new PiParser(stream);
                if (agentNames == null) agentNames = new HashSet();
                else agentNames.clear();
                if (pools == null) pools = new Hashtable();
                else pools.clear();
                if (poolNames == null) poolNames = new HashSet();
                else poolNames.clear();
                currentAgent = "";
                SimpleNode n = null;
                //try {
              n = t.Root();
            /*} catch (Exception e) {
	      System.out.println("Oops.");
	      System.out.println(e.getMessage());
	      e.printStackTrace();
    	}*/
        return n;
        }

        /**
	* Parse additional agent. Return root node with the new agent as children.
	*/
        public static SimpleNode parseAdditionalAgents(Reader stream, HashSet _agentNames, Hashtable _pools, HashSet _poolNames) throws PiParserError, Exception {
                PiParser t = new PiParser(stream);
                agentNames = _agentNames;
                pools = _pools;
                poolNames = _poolNames;
                currentAgent = "";
                SimpleNode n = null;
                //try {
              n = t.Root();
            /*} catch (Exception e) {
	      System.out.println("Oops.");
	      System.out.println(e.getMessage());
	      e.printStackTrace();
    	}*/
        return n;
        }

        public static Hashtable getPoolTable(){
                return pools;
        }

        public static HashSet getPoolNames(){
                return poolNames;
        }

        public static HashSet getAgentNames(){
                return agentNames;
        }

/**
* Create the root node.
*/
  final public SimpleNode Root() throws ParseException {
                     /*@bgen(jjtree) Root */
  ASTRoot jjtn000 = new ASTRoot(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/**
* No node is created for this rule but it takes care that at least one agent is defined.
*/
  final public void Expression() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      PoolDefinition();
    }
    label_2:
    while (true) {
      AgentDefinition();
      if (jj_2_2(3)) {
        ;
      } else {
        break label_2;
      }
    }
  }

/**
* Get the definitions of the pools and store them in the pool table.
*
*/
  final public void PoolDefinition() throws ParseException {
                             Token agentName, poolName;
    jj_consume_token(POOL_TOK);
    poolName = jj_consume_token(AGENT_ID);
                // Check if the pool is defined twice
                if (poolNames.contains(poolName.image))
                        {if (true) throw new PiParserError("Encountered duplicate pool definition: "+ poolName.image);}
    jj_consume_token(14);
    agentName = jj_consume_token(AGENT_ID);
                        // Check if the agent already belongs to another pool
                        if ( pools.containsKey(agentName.image))
                                {if (true) throw new PiParserError("Agent "+ agentName.image + " already belongs to another pool.");}
                        pools.put(agentName.image, poolName.image);
    label_3:
    while (true) {
      if (jj_2_3(3)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(15);
      agentName = jj_consume_token(AGENT_ID);
                                // Check if the agent already belongs to another pool
                                if ( pools.containsKey(agentName.image))
                                        {if (true) throw new PiParserError("Agent "+ agentName.image + " already belongs to another pool.");}
                                pools.put(agentName.image, poolName.image);
    }
    jj_consume_token(16);
  }

/**
* Create an agentDefinition node and set its attributes, which are the name of the agent (agentName),
* the parameters and if this agent is going to be executed right away  (setExecuteAgent).
*
* The definition of an agent has the following syntax:
* "exec"? "agent" <AgentName> "(" parameters ") = " <ProcessDefintion> 
*/
  final public void AgentDefinition() throws ParseException {
                          /*@bgen(jjtree) AgentDefinition */
                          ASTAgentDefinition jjtn000 = new ASTAgentDefinition(JJTAGENTDEFINITION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token name;
    try {
      if (jj_2_4(3)) {
        jj_consume_token(EXEC);
                        jjtn000.setExecuteAgent(true);
      } else {
        ;
      }
      jj_consume_token(AGENT_TOK);
      name = jj_consume_token(AGENT_ID);
                currentAgent = name.image;
                // check if this agent already exists
                if (agentNames.contains(name.image)){
                        {if (true) throw new PiParserError("Encountered duplicate definition of agent: " + name.image);}
                }
                else agentNames.add(name.image);

                jjtn000.setAgentName(name.image);
      if (jj_2_6(3)) {
        jj_consume_token(17);
      } else if (jj_2_7(3)) {
        jj_consume_token(18);
        jj_consume_token(19);
      } else if (jj_2_8(3)) {
        jj_consume_token(18);
        name = jj_consume_token(CHAN_ID);
                                jjtn000.addParameter(name.image);
        label_4:
        while (true) {
          if (jj_2_5(3)) {
            ;
          } else {
            break label_4;
          }
          jj_consume_token(15);
          name = jj_consume_token(CHAN_ID);
                                        jjtn000.addParameter(name.image);
        }
        jj_consume_token(19);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(20);
      Composition();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* A composition node is created if there is more than one process definition specified seperated by
* the "|"-operator.
*/
  final public void Composition() throws ParseException {
          ASTComposition jjtn001 = new ASTComposition(JJTCOMPOSITION);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      P();
      label_5:
      while (true) {
        if (jj_2_9(3)) {
          ;
        } else {
          break label_5;
        }
        jj_consume_token(21);
        P();
      }
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
  }

/**
* No "P" node is created, it makes sure that the process definition can consist of the constructs
* restriction, replication, defined agents and summation.
*/
  final public void P() throws ParseException {
    if (jj_2_12(3)) {
      Restriction();
      if (jj_2_10(3)) {
        Composition();
      } else {
        ;
      }
    } else if (jj_2_13(3)) {
      Replication();
      if (jj_2_11(3)) {
        Composition();
      } else {
        ;
      }
    } else if (jj_2_14(3)) {
      DefinedAgent();
    } else if (jj_2_15(3)) {
      Summation();
    } else if (jj_2_16(3)) {
      jj_consume_token(18);
      Composition();
      jj_consume_token(19);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
* Create a summation node if more than one choices are available seperated by the "+" operator.
*/
  final public void Summation() throws ParseException {
          ASTSummation jjtn001 = new ASTSummation(JJTSUMMATION);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
    try {
      M();
      label_6:
      while (true) {
        if (jj_2_17(3)) {
          ;
        } else {
          break label_6;
        }
        jj_consume_token(22);
        M();
      }
    } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
    } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
          }
    }
  }

/**
* No "M" node is created. This rule makes sure that choices are either inactive or start with one
* of the constructs defined by Pi().
*/
  final public void M() throws ParseException {
    if (jj_2_18(3)) {
      jj_consume_token(INACTION);
    } else if (jj_2_19(3)) {
      Pi();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
* Create a restriction node and fill its parameter vector.
*/
  final public void Restriction() throws ParseException {
                      /*@bgen(jjtree) Restriction */
                      ASTRestriction jjtn000 = new ASTRestriction(JJTRESTRICTION);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token name;
    try {
      if (jj_2_22(3)) {
        jj_consume_token(23);
        name = jj_consume_token(CHAN_ID);
                                                jjtn000.addResName(name.image);
        label_7:
        while (true) {
          if (jj_2_20(3)) {
            ;
          } else {
            break label_7;
          }
          jj_consume_token(15);
          name = jj_consume_token(CHAN_ID);
                                                jjtn000.addResName(name.image);
        }
      } else if (jj_2_23(3)) {
        jj_consume_token(18);
        jj_consume_token(23);
        name = jj_consume_token(CHAN_ID);
                                                jjtn000.addResName(name.image);
        label_8:
        while (true) {
          if (jj_2_21(3)) {
            ;
          } else {
            break label_8;
          }
          jj_consume_token(15);
          name = jj_consume_token(CHAN_ID);
                                                jjtn000.addResName(name.image);
        }
        jj_consume_token(19);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      P();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* Create a replication node.
*/
  final public void Replication() throws ParseException {
                      /*@bgen(jjtree) Replication */
  ASTReplication jjtn000 = new ASTReplication(JJTREPLICATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(24);
      P();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* Create a defined agent node and set its attributes agentName and parameters.
* A defined agent and the agent that turns into this defined agent have to be defined in
* the same pool.
*/
  final public void DefinedAgent() throws ParseException {
                       /*@bgen(jjtree) DefinedAgent */
                       ASTDefinedAgent jjtn000 = new ASTDefinedAgent(JJTDEFINEDAGENT);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token name;
    try {
      name = jj_consume_token(AGENT_ID);
                if (pools.get(currentAgent) != null){
                        if (!pools.get(currentAgent).equals(pools.get(name.image)))
                                {if (true) throw new PiParserError("Agents "+currentAgent+" and "+name.image+" are not in the same pool.");}
                }
                else if (pools.get(name.image) != null)
                        {if (true) throw new PiParserError("Agents "+currentAgent+" and "+name.image+" are not in the same pool.");}

                jjtn000.setAgentName(name.image);
      if (jj_2_25(3)) {
        jj_consume_token(17);
      } else if (jj_2_26(3)) {
        jj_consume_token(18);
        jj_consume_token(19);
      } else if (jj_2_27(3)) {
        jj_consume_token(18);
        name = jj_consume_token(CHAN_ID);
                                        jjtn000.addParameter(name.image);
        label_9:
        while (true) {
          if (jj_2_24(3)) {
            ;
          } else {
            break label_9;
          }
          jj_consume_token(15);
          name = jj_consume_token(CHAN_ID);
                                                jjtn000.addParameter(name.image);
        }
        jj_consume_token(19);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* No "Pi" node is created. This rule makes sure that the pi-constructs send, receive, tau and match
* can be used respectively.
*/
  final public void Pi() throws ParseException {
    if (jj_2_28(3)) {
      Send();
    } else if (jj_2_29(3)) {
      Receive();
    } else if (jj_2_30(3)) {
      Tau();
    } else if (jj_2_31(3)) {
      Match();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
* Create a send node and set its attributes channelName and parameters.
*/
  final public void Send() throws ParseException {
               /*@bgen(jjtree) Send */
                ASTSend jjtn000 = new ASTSend(JJTSEND);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token channel;
    try {
      jj_consume_token(25);
      channel = jj_consume_token(CHAN_ID);
                jjtn000.setChannelName(channel.image);
      if (jj_2_34(3)) {
        jj_consume_token(26);
      } else {
        if (jj_2_33(3)) {
          jj_consume_token(27);
          channel = jj_consume_token(CHAN_ID);
                        jjtn000.addParameter(channel.image);
          label_10:
          while (true) {
            if (jj_2_32(3)) {
              ;
            } else {
              break label_10;
            }
            jj_consume_token(15);
            channel = jj_consume_token(CHAN_ID);
                        jjtn000.addParameter(channel.image);
          }
          jj_consume_token(28);
        } else {
          ;
        }
      }
      Forward();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* Create a receive node and set its attributes channelName and parameters.
*/
  final public void Receive() throws ParseException {
                  /*@bgen(jjtree) Receive */
                  ASTReceive jjtn000 = new ASTReceive(JJTRECEIVE);
                  boolean jjtc000 = true;
                  jjtree.openNodeScope(jjtn000);Token channel;
    try {
      channel = jj_consume_token(CHAN_ID);
                jjtn000.setChannelName(channel.image);
      if (jj_2_37(3)) {
        jj_consume_token(17);
      } else {
        if (jj_2_36(3)) {
          jj_consume_token(18);
          channel = jj_consume_token(CHAN_ID);
                        jjtn000.addParameter(channel.image);
          label_11:
          while (true) {
            if (jj_2_35(3)) {
              ;
            } else {
              break label_11;
            }
            jj_consume_token(15);
            channel = jj_consume_token(CHAN_ID);
                        jjtn000.addParameter(channel.image);
          }
          jj_consume_token(19);
        } else {
          ;
        }
      }
      Forward();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* Create a tau node.
*/
  final public void Tau() throws ParseException {
              /*@bgen(jjtree) Tau */
  ASTTau jjtn000 = new ASTTau(JJTTAU);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TAU);
      Forward();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* Create a match node and set its attributes name1 and name2 which refer to the channel names going
* to be compared.
*/
  final public void Match() throws ParseException {
                /*@bgen(jjtree) Match */
                ASTMatch jjtn000 = new ASTMatch(JJTMATCH);
                boolean jjtc000 = true;
                jjtree.openNodeScope(jjtn000);Token name;
    try {
      jj_consume_token(29);
      name = jj_consume_token(CHAN_ID);
                                jjtn000.setName1(name.image);
      if (jj_2_38(3)) {
        jj_consume_token(20);
                       jjtn000.setKind(ASTMatch.EQUAL);
      } else if (jj_2_39(3)) {
        jj_consume_token(30);
                                                                jjtn000.setKind(ASTMatch.UNEQUAL);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      name = jj_consume_token(CHAN_ID);
                                        jjtn000.setName2(name.image);
      jj_consume_token(31);
      Pi();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/**
* No "Forward" node is created - workaround for left recursion.
*/
  final public void Forward() throws ParseException {
    jj_consume_token(32);
    if (jj_2_42(3)) {
      Restriction();
      if (jj_2_40(3)) {
        Composition();
      } else {
        ;
      }
    } else if (jj_2_43(3)) {
      Replication();
      if (jj_2_41(3)) {
        Composition();
      } else {
        ;
      }
    } else if (jj_2_44(3)) {
      DefinedAgent();
    } else if (jj_2_45(3)) {
      jj_consume_token(18);
      Composition();
      jj_consume_token(19);
    } else if (jj_2_46(3)) {
      M();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }
